# 3DCenterNet_GTX3090

./: CMakeLists.txt  README.md  getSupportedAPITest
example/: CMakeLists.txt  buildEngine.cpp  runDet.cpp
include/: ctdetNet.h  entroyCalibrator.h  utils.h  wilsonplugin.h
include/common/: commons.h
lib/: libnvonnxparser.so.8  libnvonnxparser.so.8.2.1
onnx-tensorrt/: CMakeLists.txt  ModelImporter.cpp  builtin_op_importers.cpp  main.cpp
plugins/: CMakeLists.txt
plugins/parsers/: CMakeLists.txt
plugins/parsers/onnx/: CMakeLists.txt
plugins/plugin/: CMakeLists.txt  InferPlugin.cpp
plugins/plugin/DCNv2/: DCNv2.cpp
plugins/plugin/common/: CMakeLists.txt
plugins/plugin/common/kernels/: CMakeLists.txt  common.cu  maskRCNNKernels.cu  nmsLayer.cu  proposalKernel.cu  sortScoresPerClass.cu  sortScoresPerImage.cu
readme/: export_onnx_ddd.py
src/: CMakeLists.txt  ctdetNet.cpp  entroyCalibrator.cpp  utils.cpp
